--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="{{content-for 'baseAssets'}}assets/images/logos/favicon.ico">
+    <!-- <link rel="icon" href="{{content-for 'baseAssets'}}assets/images/logos/favicon.ico"> -->
     <title>Loading&hellip;</title>
     <!-- {{content-for 'version'}} -->
     <meta name="description" content="">
